# kv8-metrics

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DIGEST.md  DONE.md  LICENSE  MODEL.md  NOTICES  README.md  START_HERE.md  docker-compose.yml  kv8scope.json
.github/: copilot-instructions.md
client/: README.md
client/kv8_client/: __init__.py
client/tests/: test_metrics.py
cmake/: Kv8SdkConfig.cmake.in  libuvConfig.cmake
config/: imgui.ini
docker/: docker-compose.yml
docker/kafka-config/: README.md  kafka_server_jaas.conf  test_client.properties
docs/: KV8LIB_API_REFERENCE.md  KV8SCOPE_USER_GUIDE.md
examples/kv8bench/: CMakeLists.txt  kv8bench.cpp
examples/kv8bench_log/: CMakeLists.txt  kv8bench_log.cpp
examples/kv8cli/: CMakeLists.txt  kv8cli.cpp
examples/kv8feeder/: CMakeLists.txt  Generators.h  UdtFeeds.cpp  UdtFeeds.h  main.cpp
kv8scope/: AnnotationStore.cpp  AnnotationStore.h  App.cpp  App.h  CMakeLists.txt  ConfigStore.cpp  ConfigStore.h  ConnectionDialog.cpp  ConnectionDialog.h  Constants.h  ConsumerThread.cpp  ConsumerThread.h  CounterTree.cpp  CounterTree.h  FontManager.cpp  FontManager.h  LogPanel.cpp  LogPanel.h  LogStore.cpp  LogStore.h  ScopeWindow.cpp  ScopeWindow.h  SessionListPanel.cpp  SessionListPanel.h  SessionManager.cpp  SessionManager.h  SpscDynamicRing.h  SpscRingBuffer.h  StatsEngine.cpp  StatsEngine.h  StatsPanel.cpp  StatsPanel.h  ThemeManager.cpp  ThemeManager.h  TimeConverter.cpp  TimeConverter.h  WaveformRenderer.cpp  WaveformRenderer.h  imgui.ini  kv8scope.json  (+1 more)
kv8zoom/: AttitudeFilter.cpp  AttitudeFilter.h  CMakeLists.txt  Config.cpp  Config.h  DecimationController.cpp  DecimationController.h  FrameAssembler.cpp  FrameAssembler.h  Frames.h  KafkaReader.cpp  KafkaReader.h  PathSimplifier.cpp  PathSimplifier.h  Serializer.cpp  Serializer.h  SpscFixedRing.h  SpscRingBuffer.h  WsServer.cpp  WsServer.h  ZoomBridge.cpp  ZoomBridge.h  kv8zoom.json  main.cpp
kv8zoom/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
kv8zoom/frontend/src/: App.css  App.tsx  main.tsx
kv8zoom/frontend/src/bridge/: Protocol.ts  WsClient.ts
kv8zoom/frontend/src/components/: AttitudeIndicator.tsx  DataRateBar.tsx  EnuReadout.tsx  IsometricView.tsx  MotorRing.tsx  NavStatus.tsx  SessionPicker.tsx  TimelineBar.tsx  ViewControls.tsx
kv8zoom/frontend/src/hooks/: useCamera.ts  useZoomBridge.ts
kv8zoom/frontend/src/renderer/: CoordPlane.ts  FlightTrail.ts  LiveModel.ts  VelocityVector.ts
kv8zoom/tests/: CMakeLists.txt  TestAttitudeFilter.cpp  TestDecimationController.cpp  TestPathSimplifier.cpp  TestSerializer.cpp  TestSpscFixedRing.cpp  TestSpscRingBuffer.cpp
libs/kv8log/: CMakeLists.txt
libs/kv8log/include/kv8log/: Channel.h  Counter.h  KV8_Log.h  KV8_UDT.h  Runtime.h  UdtFeed.h  kv8log_types.h
libs/kv8log/lib/: kv8log_impl.cpp
libs/kv8log/src/: Channel.cpp  Counter.cpp  DefaultChannel.cpp  Runtime.cpp
libs/kv8log/test/: BrokerCheck.h  test_compile_out.cpp  test_default_channel.cpp  test_log_e2e.cpp  test_log_levels.cpp  test_log_static_cache.cpp  test_log_wire.cpp  test_monotonic.cpp  test_no_runtime.cpp  test_null_lib.cpp
libs/kv8util/: CMakeLists.txt
libs/kv8util/include/kv8util/: Kv8AppUtils.h  Kv8BenchMsg.h  Kv8Platform.h  Kv8Stats.h  Kv8Timer.h  Kv8TopicUtils.h
libs/kv8util/src/: Kv8Stats.cpp  Kv8TopicUtils.cpp
libs/kv8util/test/: kv8lib_test.cpp
libs/libkv8/: CMakeLists.txt
libs/libkv8/include/kv8/: IKv8Consumer.h  IKv8Producer.h  Kv8Constants.h  Kv8Types.h
libs/libkv8/src/: Kv8Consumer.cpp  Kv8Producer.cpp  UdtSchemaParser.cpp  UdtSchemaParser.h
monitor/kv8_monitor/: __init__.py  monitor.py
monitor/tests/: test_monitor.py
processor/: README.md  main.py
processor/kv8_processor/: processor.py
processor/tests/: test_processor.py
python-tools/client/: pyproject.toml
python-tools/client/kv8_client/: collector.py  metrics.py  producer.py
python-tools/client/tests/: test_collector.py
python-tools/monitor/: README.md  main.py
python-tools/processor/kv8_processor/: __init__.py
python-tools/viewer/: README.md  requirements.txt
python-tools/viewer/kv8_viewer/: __init__.py  storage.py
python-tools/viewer/tests/: test_storage.py
scripts/: bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  test_kafka_e2e.ps1  test_kafka_e2e.sh  test_ts_e2e.ps1  test_ts_e2e.sh
tools/kv8maint/: CMakeLists.txt  kv8maint.cpp
tools/kv8probe/: CMakeLists.txt  kv8probe.cpp
tools/kv8verify/: CMakeLists.txt  kv8verify.cpp
viewer/: main.py
viewer/kv8_viewer/: app.py  consumer.py
